# xschem-parser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  rustfmt.toml
.github/workflows/: check.yml
assets/: 7805.sym  embedding.sch  pcb_test1.sch  pmos.sym
crates/xschem-parser/: Cargo.toml
crates/xschem-parser-cli/: Cargo.toml  README.md
crates/xschem-parser-cli/src/: main.rs
crates/xschem-parser/src/: error.rs  lib.rs  parse.rs  token.rs
crates/xschem-parser/src/test/: mod.rs  parse.rs  token.rs
